--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "duchinese-helper",
   "engines": {
     "node": ">=16.0.0"
   },
@@ -21,5 +22,6 @@
     "prepare": "npm run compile",
     "pretest": "npm run compile",
     "posttest": "npm run lint"
-  }
+  },
+  "sideEffects": false
 }
